<resources>
    <string name="app_name">PlanRadar Task</string>

    <string name="label_empty_cities">You have no saved cities,\nclick on + button to add new city</string>

    <string name="title_cities_fragment">Cities</string>
    <string name="title_add_city">Add city</string>

    <string name="txt_weather_date">Weather information for %1$s received on\n %2$s.</string>

    <string name="label_description">Description</string>
    <string name="label_temp">Temperature</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_wind_speed">Windspeed</string>
    <string name="error_common">Error occurred, Please try again</string>
    <string name="error_no_internet_connection">Please check your internet connection</string>
    <string name="btn_try_again">Try again</string>
    <string name="btn_refresh">Refresh</string>
    <string name="empty__history">There is no history</string>
    <string name="invalid_empty_city_name">City name mustn\'t be empty.</string>
    <string name="btn_add_city">Add city</string>
    <string name="hint_search_for_city">Search for cities</string>
    <string name="info_content_description">Weather\'s information for this city</string>
    <string name="city_icon_content_description">city icon</string>
    <string name="no_result">No Result</string>
    <string name="loading">loading …</string>
</resources>