<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/grad_background"
    tools:context=".presentation.features.details.DetailsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:shadowColor="@color/black"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:text="@string/loading"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />


            <ImageView
                android:id="@+id/ivWeather"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="68dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCityName"
                tools:src="@drawable/ic_cloud"
                android:contentDescription="@string/info_content_description" />


            <TextView
                android:id="@+id/txtDescriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/label_description"
                android:textAppearance="@style/CustomSubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivWeather" />

            <TextView
                android:id="@+id/tvDescriptionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:gravity="end|center_vertical"
                android:lines="1"
                android:text="@string/loading"
                android:textAppearance="@style/CustomBlueSubTitle"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/txtDescriptionLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtDescriptionLabel"
                app:layout_constraintTop_toTopOf="@+id/txtDescriptionLabel"
                 />


            <TextView
                android:id="@+id/txtTemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/label_temp"
                android:textAppearance="@style/CustomSubTitle"
                app:layout_constraintStart_toStartOf="@id/txtDescriptionLabel"
                app:layout_constraintTop_toBottomOf="@+id/txtDescriptionLabel" />

            <TextView
                android:id="@+id/tvTemValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textAppearance="@style/CustomBlueSubTitle"
                app:layout_constraintBottom_toBottomOf="@+id/txtTemLabel"
                app:layout_constraintEnd_toEndOf="@id/tvDescriptionValue"
                app:layout_constraintTop_toTopOf="@+id/txtTemLabel"
                 />


            <TextView
                android:id="@+id/txtHumidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/label_humidity"
                android:textAppearance="@style/CustomSubTitle"
                app:layout_constraintStart_toStartOf="@id/txtDescriptionLabel"
                app:layout_constraintTop_toBottomOf="@+id/txtTemLabel" />

            <TextView
                android:id="@+id/tvHumidityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textAppearance="@style/CustomBlueSubTitle"
                app:layout_constraintBottom_toBottomOf="@+id/txtHumidityLabel"
                app:layout_constraintEnd_toEndOf="@id/tvDescriptionValue"
                app:layout_constraintTop_toTopOf="@+id/txtHumidityLabel"
                 />

            <TextView
                android:id="@+id/txtWindLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/label_wind_speed"
                android:textAppearance="@style/CustomSubTitle"
                app:layout_constraintStart_toStartOf="@id/txtDescriptionLabel"
                app:layout_constraintTop_toBottomOf="@+id/txtHumidityLabel" />

            <TextView
                android:id="@+id/tvWindValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textAppearance="@style/CustomBlueSubTitle"
                app:layout_constraintBottom_toBottomOf="@+id/txtWindLabel"
                app:layout_constraintEnd_toEndOf="@id/tvDescriptionValue"
                app:layout_constraintTop_toTopOf="@+id/txtWindLabel"
                 />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/home_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/tvWeatherDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/very_dark_grayish_blue"
        android:text="@string/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        tools:text="Weather information for Cairo received on\n 15.01.2022 18:00." />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:visibility="gone"
        android:indeterminateTint="@color/strong_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />


</androidx.constraintlayout.widget.ConstraintLayout>
